heapsz/tests/ui/fail-derive-none-heapsize.stderr
error[E0277]: the trait bound `NoneHeapSize: HeapSize` is not satisfied
  --> tests/ui/fail-derive-none-heapsize.rs:7:10
   |
7  |   #[derive(HeapSize)]
   |            ^^^^^^^^ the trait `HeapSize` is not implemented for `NoneHeapSize`
8  |   pub struct BadStruct {
9  | /     #[heap_size]
10 | |     pub a: NoneHeapSize,
   | |_______________________- required by a bound introduced by this call
   |
   = help: the following other types implement trait `HeapSize`:
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
             (A, B, C, D, E, F, G)
             Arc<T>
           and $N others
